# nova

./: .gitattributes  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  index.html  lefthook.yml  llms-full.txt  llms.txt  release-please-config.json  search-index.json  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml  release.yml
ai/: index.html
assets/: default_settings.toml  default_settings_macos.toml  nova.desktop
assets/css/: docmd-highlight-dark.css  docmd-highlight-light.css  docmd-main.css  docmd-theme-retro.css  docmd-theme-ruby.css  docmd-theme-sky.css
assets/js/: docmd-api.js  docmd-i18n-strings.js  docmd-image-lightbox.js  docmd-main.js  docmd-search.js  init-mermaid.js
cli/: index.html
configuration/: index.html
development/: index.html
docs/: docmd.config.js  package.json
docs/content/: ai.md  cli.md  configuration.md  development.md  index.md  installation.md  internals-osc.md  keybindings.md  quickstart.md  troubleshooting.md
installation/: index.html
internals-osc/: index.html
keybindings/: index.html
packaging/aur/: .SRCINFO  PKGBUILD
packaging/nsis/: nova-installer.nsi
quickstart/: index.html
src/: main.rs
src/cli/: constants.rs  mod.rs
src/cli/commands/: ask.rs  config.rs  explain.rs  help.rs  mark.rs  mod.rs
src/core/: ai.rs  config.rs  grid.rs  mod.rs  url.rs
src/sys/: bell.rs  kitty_graphics.rs  mod.rs  notification.rs  parser.rs  pty.rs
src/ui/: app_state.rs  components.rs  helpers.rs  mod.rs  tab.rs  theme.rs  typography.rs
src/ui/app_state/: helpers.rs  message.rs  mod.rs  nova.rs  subscription.rs  view.rs
src/ui/app_state/update/: ai.rs  input.rs  mod.rs  mouse.rs  palette.rs  search.rs  settings.rs  tabs.rs  window.rs
src/ui/components/: ai_overlay.rs  app.rs  color_row.rs  command_palette.rs  mod.rs  paste_warning.rs  search_bar.rs  section_label.rs  setting_row.rs  settings.rs  settings_ai.rs  settings_general.rs  settings_keybindings.rs  settings_status_bar.rs  settings_theme.rs  shell_picker.rs  status_bar.rs  tab_bar.rs  term.rs  title_bar.rs  traffic_lights.rs
src/ui/theme/: color.rs  font.rs
troubleshooting/: index.html
