[package]
name = "nova"
version = "0.5.3"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-channel = "2.5.0"
chrono = "0.4.44"
dirs = "5"
iced = { version = "0.14.0", features = ["tokio", "svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
vte = "0.15.0"

[build-dependencies]
ico = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.packager]
name = "Nova"
identifier = "com.pmqueiroz.nova"
description = "A GPU-accelerated terminal emulator"
long_description = "Nova is a fast, GPU-accelerated terminal emulator built with Rust and iced."
homepage = "https://github.com/pmqueiroz/nova"
license_file = "LICENSE"
formats = ["app", "dmg", "nsis", "deb", "appimage"]
icons = [
  "assets/icons/macos/nova-mac-16.png",
  "assets/icons/macos/nova-mac-32.png",
  "assets/icons/macos/nova-mac-128.png",
  "assets/icons/macos/nova-mac-256.png",
  "assets/icons/macos/nova-mac-512.png",
  "assets/icons/macos/nova-mac-512@2x.png",
]

[package.metadata.packager.macos]
minimum_system_version = "11.0"

[package.metadata.packager.deb]
section = "utils"
priority = "optional"
depends = ["libxkbcommon0", "libwayland-client0", "libgl1"]
