[package]
name = "nova"
version = "0.18.0"
edition = "2024"
description = "A GPU-accelerated terminal emulator"
license = "MIT"
homepage = "https://github.com/pmqueiroz/nova"
repository = "https://github.com/pmqueiroz/nova"

[dependencies]
anyhow = "1.0.102"
open = "5"
anthropic = "0.0.8"
openai_api_rust = "0.1.9"
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
async-channel = "2.5.0"
chrono = "0.4.44"
dirs = "5"
iced = { version = "0.14.0", features = ["tokio", "svg", "image"] }
rodio = { version = "0.19", default-features = false, features = ["flac"] }
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
vte = "0.15.0"
bitflags = "2"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_Storage_FileSystem",
] }

[build-dependencies]
ico = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.packager]
name = "Nova"
identifier = "com.pmqueiroz.nova"
description = "A GPU-accelerated terminal emulator"
long_description = "Nova is a fast, GPU-accelerated terminal emulator built with Rust and iced."
homepage = "https://github.com/pmqueiroz/nova"
license_file = "LICENSE"
formats = ["app", "dmg", "nsis", "deb", "appimage"]
icons = [
  "assets/icons/macos/nova-mac-16.png",
  "assets/icons/macos/nova-mac-32.png",
  "assets/icons/macos/nova-mac-128.png",
  "assets/icons/macos/nova-mac-256.png",
  "assets/icons/macos/nova-mac-512.png",
  "assets/icons/macos/nova-mac-512@2x.png",
  "assets/icons/linux/nova-linux-16.png",
  "assets/icons/linux/nova-linux-24.png",
  "assets/icons/linux/nova-linux-32.png",
  "assets/icons/linux/nova-linux-48.png",
  "assets/icons/linux/nova-linux-64.png",
  "assets/icons/linux/nova-linux-128.png",
  "assets/icons/linux/nova-linux-256.png",
  "assets/icons/linux/nova-linux-512.png",
]
category = "Utility"

[package.metadata.packager.macos]
minimum_system_version = "11.0"

[package.metadata.packager.nsis]
template = "packaging/nsis/nova-installer.nsi"
installer_mode = "both"

[package.metadata.packager.deb]
section = "utils"
priority = "optional"
depends = ["libxkbcommon0", "libwayland-client0", "libgl1"]
desktop_template = "assets/nova.desktop"

[package.metadata.generate-rpm]
license = "MIT"
release = "1"
assets = [
  { source = "target/release/nova", dest = "/usr/bin/nova", mode = "755" },
]
